# glengine

./: .gitignore  .gitmodules  ARCHITECTURE.MD  ChangeLog  Doxyfile.in  Makefile.am  TODO  autogen.sh  configure.ac
data/: shader.vert
doc/: .gitignore  Doxyfile  Doxyfile.in  glengine.aux  glengine.fdb_latexmk  glengine.fls  glengine.out  glengine.tex  glengine.toc
include/: application.h  arguments.h  glengine.h  logger.h
include/gle/: application.h  arguments.h  attribute.h  buffer.h  color.h  engine.h  image.h  logger.h  shader.h  shaderprogram.h  uuid.h  vertexarray.h
m4/: check_freetype2.m4  check_gdi.m4  check_glfw.m4  check_glfw3.m4  check_glib.m4  check_glm.m4  check_xlib.m4
src/: application.cc  application.h  arguments.cc  arguments.h  attribute.cc  attribute.h  buffer.cc  buffer.h  camera.cc  camera.h  color.cc  color.h  dirs.cc  dirs.h  engine.cc  font.cc  font.h  framebuffer.cc  framebuffer.h  glengine.cc  glyph.cc  glyph.h  image.cc  image.h  light.cc  light.h  logger.cc  logger.h  mesh.cc  mesh.h  object.cc  object.h  opengl.cc  opengl.h  path.cc  path.h  rasterfont.cc  rasterfont.h  rasterglyph.cc  rasterglyph.h  (+20 more)
tests/: DragonAttenuation.gltf  app.cc  dice.gltf  engine.cc  framebuffer.frag  framebuffer.vert  shader.frag  shader.vert  t_args  test.tga
